feat: Include movie release year in search results & fix found_doc_as_text content bug (only the content of one result was added 5 times)

--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -272,21 +272,19 @@
     "    query_type=\"semantic\",\n",
     "    semantic_configuration_name=\"movies-semantic-config\",\n",
     "    vector_queries=[vector],\n",
-    "    select=[\"title\", \"genre\", \"plot\"],\n",
+    "    select=[\"title\", \"genre\", \"plot\", \"year\"],\n",
     "    top=5\n",
     "))\n",
     "\n",
+    "found_docs_as_text = \" \"\n",
     "# print the found documents and the field that were selected\n",
     "for doc in found_docs:\n",
     "    print(\"Movie: {}\".format(doc[\"title\"]))\n",
     "    print(\"Genre: {}\".format(doc[\"genre\"]))\n",
+    "    print(\"Year: {}\".format(doc[\"year\"]))\n",
     "    print(\"----------\")\n",
-    "\n",
-    "\n",
-    "found_docs_as_text = \" \"\n",
-    "for elem in enumerate(found_docs, start=1):    \n",
-    "    found_docs_as_text += \" \"+ \"Movie Title: {}\".format(doc[\"title\"]) +\" \"+ \"Movie story: {}\".format(doc[\"plot\"])\n",
-    "\n",
+    "    found_docs_as_text += \" \"+ \"Movie Title: {}\".format(doc[\"title\"]) +\" \"+ \"Release Year: {}\".format(doc[\"year\"]) + \" \"+ \"Movie Plot: {}\".format(doc[\"plot\"])\n",
+    "    \n",
     "# augment the question with the found documents and ask the LLM to generate a response\n",
     "system_prompt = \"You are an assistant to the user, you are given some context below, please answer the query of the user with as detail as possible\"\n",
     "\n",
