Fix: Update error messages in notebook_p3.ipynb

--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -137,7 +137,7 @@
     "        return response.text\n",
     "\n",
     "    except:\n",
-    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "        return \"Sorry, I couldn't find a location for that movie.\"\n",
     "\n",
     "def get_movie_genre(title):\n",
     "    try:\n",
@@ -147,7 +147,7 @@
     "        return response.text\n",
     "\n",
     "    except:\n",
-    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "        return \"Sorry, I couldn't find a genre for that movie.\"\n",
     "\n",
     "title_param = \"Hobbiton: The Heist of the Silver Dragon\"\n",
     "\n",
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
