Fix: Update typo for error message for missing actor in notebook_p3.ipynb

--- a/src-agents/phase3/notebook_p3.ipynb
+++ b/src-agents/phase3/notebook_p3.ipynb
@@ -127,7 +127,7 @@
     "        return response.text\n",
     "\n",
     "    except:\n",
-    "        return \"Sorry, I couldn't find a actor for that movie.\"\n",
+    "        return \"Sorry, I couldn't find an actor for that movie.\"\n",
     "    \n",
     "def get_movie_location(title):\n",
     "    try:\n",
