chore: update dependencies

--- a/src-agents/phase2/notebook_p2.ipynb
+++ b/src-agents/phase2/notebook_p2.ipynb
@@ -286,7 +286,7 @@
     "    found_docs_as_text += \" \"+ \"Movie Title: {}\".format(doc[\"title\"]) +\" \"+ \"Release Year: {}\".format(doc[\"year\"]) + \" \"+ \"Movie Plot: {}\".format(doc[\"plot\"])\n",
     "    \n",
     "# augment the question with the found documents and ask the LLM to generate a response\n",
-    "system_prompt = \"You are an assistant to the user, you are given some context below, please answer the query of the user with as detail as possible\"\n",
+    "system_prompt = \"Here is what you need to do:\"\n",
     "\n",
     "parameters = [system_prompt, ' Context:', found_docs_as_text , ' Question:', question]\n",
     "joined_parameters = ''.join(parameters)\n",
@@ -326,14 +326,18 @@
     "    Ask a question\n",
     "    \"\"\"\n",
     "    \n",
-    "    answer = \"I dont know\"\n",
+    "    start_phrase =  ask.question\n",
+    "    response: openai.types.chat.chat_completion.ChatCompletion = None\n",
     "\n",
     "    #####\\n\",\n",
     "    # implement rag flow here\\n\",\n",
     "    ######\\n\",\n",
     "   \n",
+    "    answer = Answer(answer=response.choices[0].message.content)\n",
+    "    answer.correlationToken = ask.correlationToken\n",
+    "    answer.promptTokensUsed = response.usage.prompt_tokens\n",
+    "    answer.completionTokensUsed = response.usage.completion_tokens\n",
     "    \n",
-    "    print('Answer:', answer)\n",
     "    return answer"
    ]
   },
