--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -128,6 +128,7 @@
     "    print('Sending a request to openai')\n",
     "    \n",
     "    start_phrase =  ask.question\n",
+    "    response: openai.types.chat.chat_completion.ChatCompletion = None\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
     "        model = deployment_name,\n",
@@ -231,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
