--- a/src-agents/phase1/notebook_p1.ipynb
+++ b/src-agents/phase1/notebook_p1.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found Azure OpenAI API Base Endpoint: https://cog-45xex7bgir6oe.openai.azure.com/\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from openai import AzureOpenAI\n",
@@ -57,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spending quality time with loved ones. Whether it's having a deep conversation, sharing a meal, or enjoying a fun activity together, the connection and joy it brings are unmatched. What about you?\n"
+     ]
+    }
+   ],
    "source": [
     "response = client.chat.completions.create(\n",
     "    model = model_name,    \n",
@@ -78,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +149,7 @@
     "    response = client.chat.completions.create(\n",
     "        model = deployment_name,\n",
     "        messages = [{\"role\" : \"assistant\", \"content\" : start_phrase}, \n",
-    "                     { \"role\" : \"system\", \"content\" : \"Answer this question:\"}]\n",
+    "                     { \"role\" : \"system\", \"content\" : \"Answer the question solely with the answer. For estimation questions use number symbols. Format the answer to remove all punctuation:\"}]\n",
     "    )\n",
     "\n",
     "    print(response.choices[0].message.content)\n",
@@ -142,6 +158,7 @@
     "    answer.correlationToken = ask.correlationToken\n",
     "    answer.promptTokensUsed = response.usage.prompt_tokens\n",
     "    answer.completionTokensUsed = response.usage.completion_tokens\n",
+    "    \n",
     "\n",
     "    return answer"
    ]
@@ -155,14 +172,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending a request to openai\n",
+      "Green\n",
+      "ChatCompletion(id='chatcmpl-A8OdYTCyZcZK7vuTuBEFI7wNYLL0D', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Green', refusal=None, role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1726564692, model='gpt-4o-2024-08-06', object='chat.completion', service_tier=None, system_fingerprint='fp_b2ffeb16ee', usage=CompletionUsage(completion_tokens=1, prompt_tokens=51, total_tokens=52), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {}}])\n",
+      "Answer: answer='Green' correlationToken=None promptTokensUsed=51 completionTokensUsed=1\n",
+      "Sending a request to openai\n",
+      "The Wizard of Oz\n",
+      "ChatCompletion(id='chatcmpl-A8OdYGUW1e9bz10eyLDHVGLOjo1jB', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='The Wizard of Oz', refusal=None, role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1726564692, model='gpt-4o-2024-08-06', object='chat.completion', service_tier=None, system_fingerprint='fp_b2ffeb16ee', usage=CompletionUsage(completion_tokens=4, prompt_tokens=78, total_tokens=82), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {}}])\n",
+      "Answer: answer='The Wizard of Oz' correlationToken=None promptTokensUsed=78 completionTokensUsed=4\n",
+      "Sending a request to openai\n",
+      "False\n",
+      "ChatCompletion(id='chatcmpl-A8OdZlfd65mSR0QwI5w9KldDQicct', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='False', refusal=None, role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1726564693, model='gpt-4o-2024-08-06', object='chat.completion', service_tier=None, system_fingerprint='fp_b2ffeb16ee', usage=CompletionUsage(completion_tokens=1, prompt_tokens=49, total_tokens=50), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {}}])\n",
+      "Answer: answer='False' correlationToken=None promptTokensUsed=49 completionTokensUsed=1\n",
+      "Sending a request to openai\n",
+      "3\n",
+      "ChatCompletion(id='chatcmpl-A8OdZfDQiYprFZ8pWbZJQzGhzUTNl', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='3', refusal=None, role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1726564693, model='gpt-4o-2024-08-06', object='chat.completion', service_tier=None, system_fingerprint='fp_b2ffeb16ee', usage=CompletionUsage(completion_tokens=1, prompt_tokens=53, total_tokens=54), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {}}])\n",
+      "Answer: answer='3' correlationToken=None promptTokensUsed=53 completionTokensUsed=1\n",
+      "Sending a request to openai\n",
+      "Robert Downey Jr\n",
+      "ChatCompletion(id='chatcmpl-A8OdZ9mWclLEidbPorVwb8GdwrqoW', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Robert Downey Jr', refusal=None, role='assistant', function_call=None, tool_calls=None), content_filter_results={'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}})], created=1726564693, model='gpt-4o-2024-08-06', object='chat.completion', service_tier=None, system_fingerprint='fp_b2ffeb16ee', usage=CompletionUsage(completion_tokens=4, prompt_tokens=62, total_tokens=66), prompt_filter_results=[{'prompt_index': 0, 'content_filter_results': {}}])\n",
+      "Answer: answer='Robert Downey Jr' correlationToken=None promptTokensUsed=62 completionTokensUsed=4\n"
+     ]
+    }
+   ],
    "source": [
+    "ask0 = Ask(question=\"Which of the following is a color? a. Tree b. Flower c. Green\", type=QuestionType.multiple_choice)\n",
+    "answer0 = await ask_question(ask0)\n",
+    "print('Answer:', answer0)\n",
     "\n",
-    "ask = Ask(question=\"Which of the following is a color? a. Tree b. Flower c. Green\", type=QuestionType.multiple_choice)\n",
-    "answer = await ask_question(ask)\n",
-    "print('Answer:', answer)\n"
+    "ask1 = Ask(question=\"Which movie features a plot where a young girl named Dorothy is transported to a magical land via a tornado? 1) Cinderella 2) The Wizard of Oz 3) Alice in Wonderland 4) The Little Mermaid\", type=QuestionType.multiple_choice)\n",
+    "answer1 = await ask_question(ask1)\n",
+    "print('Answer:', answer1)\n",
+    "\n",
+    "ask2 = Ask(question=\"Is Yoda a character from the Star Trek universe: True or False?\", type=QuestionType.true_or_false)\n",
+    "answer2 = await ask_question(ask2)\n",
+    "print('Answer:', answer2)\n",
+    "\n",
+    "ask3 = Ask(question=\"How many movies are there in 'The Lord of the Rings' trilogy directed by Peter Jackson?\", type=QuestionType.estimation)\n",
+    "answer3 = await ask_question(ask3)\n",
+    "print('Answer:', answer3)\n",
+    "\n",
+    "ask4 = Ask(question=\"Who is the actor behind iron man?  1. Bill Gates, 2. Robert Downey Jr, 3. Jeff Bezos\", type=QuestionType.multiple_choice)\n",
+    "answer4 = await ask_question(ask4)\n",
+    "print('Answer:', answer4)\n"
    ]
   },
   {
@@ -232,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
